Bug 6416: Spacing on screen

--- a/src/pages/external-access/external-email/components/external-email-reply.scss
+++ b/src/pages/external-access/external-email/components/external-email-reply.scss
@@ -25,6 +25,10 @@
     padding-right: 0.75rem;    
 }
 
+.ql-snow .ql-picker.ql-size {
+    width: 6.7rem;
+}
+
 .reply-editor .ql-toolbar.ql-snow {
     padding-top: 1rem;
     border: 1px solid var(--light-divider-7);
